--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     padding: 50px 30px;
 }
 .container *{
-    font-family: "Poppins",sans-serif;
+    font-family:'Times New Roman', Times, serif;
     border: none;
     outline: none;
 }
