--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #00000000;
+    background-color: #ffffff;
 }
 .container{
     width: 40%;
