background color change

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #e5f10a;
+    background-color: #ffffff;
 }
 .container{
     width: 40%;
